# haskell-aoc-2024

./: .gitignore  LICENSE  haskell-aoc2024.cabal  haskell-aoc2024.nix  release.nix
app/: .Day06.hs.kate-swp  DataMassParsers.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Debugging.hs  Main.hs  TestLib.hs  TestLibrary.hs
