cabal-version:      3.0
name:               haskell-aoc2024
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Leandro Alves
maintainer:         leandroprogramadoruxdesign@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable haskell-aoc2024
    import:           warnings
    main-is:          Main.hs
    other-modules:    TestLib, DataMassParsers, Debugging
                      , Day01, Day02, Day03, Day04, Day05, Day06, Day07
                      , Day08, Day09, Day10, Day11, Day12, Day13
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                      , split ^>=0.2.5
    hs-source-dirs:   app
    default-language: Haskell2010
